<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rh_p12_rn_a_description</name>
  <version>0.2.0</version>
  <description>
    rh_p12_rn_a_description ROS 2 package.
  </description>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <license>Apache 2.0</license>
  <url type="website">http://wiki.ros.org/rh_p12_rn_a_description</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/RH-P12-RN-A</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/RH-P12-RN-A/issues</url>
  <author email="sch@robotis.com">SCH</author>
  <author email="wwj@robotis.com">Woojin Wie</author>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
