<?xml version="1.0"?>
<package format="2">
  <name>rh_p12_rn_a_manager</name>
  <version>0.1.0</version>
  <description>
    Manager package using ROBOTIS framework to control the RH-P12-RN(A)
  </description>
  <license>Apache 2.0</license>
  <author email="zerom@robotis.com">Zerom</author>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <url type="website">http://wiki.ros.org/rh_p12_rn_a_manager</url>
  <url type="emanual">http://emanual.robotis.com/docs/en/platform/rh_p12_rna/</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/RH-P12-RN-A</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/RH-P12-RN-A/issues</url>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>robotis_controller_msgs</depend>
  <depend>cmake_modules</depend>
  <depend>dynamixel_sdk</depend>
  <depend>robotis_framework_common</depend>
  <depend>robotis_device</depend>
  <depend>robotis_controller</depend>
  <depend>rh_p12_rn_a_base_module</depend>
</package>
